welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value R
  if (litMessage()==R) {
                    ^BDRBuggle:7: error: not found: value L
  } else if (litMessage()==L) {
                           ^BDRBuggle:10: error: not found: value I
  } else if (litMessage()==I) {
                           ^BDRBuggle:13: error: not found: value A
  } else if (litMessage()==A) {
                           ^